revised DOM for symantics, built slider for currency, destroyed a bunch of sass(we'll work on that)

--- a/www/index.html
+++ b/www/index.html
@@ -78,10 +78,10 @@
 
 <body>
 
-    <section id="header">
+    <header id="header">
         <h3 id="logo">Logo</h3>
         <h3>Nav</h3>
-    </section>
+    </header>
     
     <section class="intro">
         <h2>Welcome to Currency Voyager!</h2>
@@ -89,23 +89,23 @@
 
     </section>
 
-    <section class='promo'>
+    <section class='promo notes'><!-- re-class me to .notes -->
 
         <h3>Costa Rica</h3>
 
-        <section class='note'>
+        <div class='note'>
             <img class="money" src="img/2costa2.png">
                 <h5>Mauro Fernández Acuña</h5>
                 <h6>Director of the Bank of Costa Rica</h6>
-        </section>
+        </div>
     <!-- <section class='info1'>
         <p>info info</p>
     </section> -->
-        <section class='note'>
+        <div class='note'>
             <img class="money"src="img/2costa.png">
                 <h5>Bull Shark</h5>
                 <h6>Bull sharks are typically solitary hunters</h6>
-        </section>  
+        </div>  
     </section>
     
 
