make more updates to Raphael map

--- a/www/index.html
+++ b/www/index.html
@@ -236,8 +236,8 @@
 
         </div>
     </section>
-    <div class="map-fade"></div>
     
+
     <div id="map">
         <div class="mapcontainer" class="smoothScroll">
             <div class="map">Alternative content</div>
@@ -250,6 +250,9 @@
 
 
 $(document).ready(function(){
+
+   
+
 
     $(".mapcontainer").mapael({
     map : {
@@ -369,10 +372,10 @@ $(document).ready(function(){
 
 
  
-    <footer>
+    <!--<section id="footer">
         <p class="container">Some things about who we are</p>
 
-    </footer>
+    </section>-->
 
 </body>
 </html>
