--- a/www/index.html
+++ b/www/index.html
@@ -40,8 +40,8 @@
     <script type="text/javascript" src="js/libs/raphael.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
     <script type="text/javascript" src="javascript/smoothscroll.js"></script>
-     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
-    <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+    <!--<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
+    <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script> -->
     
    <!-- <script type="text/javascript" src="deps.js"></script> -->
 
@@ -253,12 +253,105 @@
 $(document).ready(function(){
 
 
-
+/*
 
     $(".mapcontainer").mapael({
     map : {
         name : "world_countries"
     }
+    });
+
+*/
+    $(".mapcontainer").mapael({
+        map: {
+            name: "world_countries",
+            zoom: {
+                enabled: true
+            },
+            defaultArea: {
+                attrs: {
+                    fill: "#666666",
+                    stroke: "#000000" ,
+                    cursor: "pointer"
+                },
+                attrsHover: {
+                    animDuration: 0
+                },
+                text: {
+                    attrs: {
+                        cursor: "pointer",
+                            "font-size": 10,
+                        fill: "#000"
+                    },
+                    attrsHover: {
+                        animDuration: 0
+                    }
+                },
+
+                /* add hover --> change country & currency name */
+                eventHandlers: {
+                    click: function (e, id, mapElem, textElem) {
+                       
+                        getCurrency(id);
+                        var newData = {
+                            'areas': {}
+                           // console.log(id);
+
+                        };
+                        if (mapElem.originalAttrs.fill == "#5ba4ff") {
+                            newData.areas[id] = {
+                                attrs: {
+                                    fill: "#0088db"
+                                }
+                            };
+                        } else {
+                            newData.areas[id] = {
+                                attrs: {
+                                    fill: "#5ba4ff"
+                                }
+                            };
+                        }
+                        $(".maparea3").trigger('update', [newData]);
+                    }
+                }
+            }
+        },
+        areas: {
+            "department-29": {
+                text: {
+                    content: "dblclick",
+                    position: "top"
+                },
+                attrs: {
+                    fill: "#0088db"
+                },
+                tooltip: {
+                    content: "Finistère (29)"
+                },
+                eventHandlers: {
+                    click: function () {},
+                    dblclick: function (e, id, mapElem, textElem) {
+                        var newData = {
+                            'areas': {}
+                        };
+                        if (mapElem.originalAttrs.fill == "#5ba4ff") {
+                            newData.areas[id] = {
+                                attrs: {
+                                    fill: "#0088db"
+                                }
+                            };
+                        } else {
+                            newData.areas[id] = {
+                                attrs: {
+                                    fill: "#5ba4ff"
+                                }
+                            };
+                        }
+                        $(".maparea3").trigger('update', [newData, false, false, 0]);
+                    }
+                }
+            }
+        }
     });
 
 
