included country data, responsive notes

--- a/www/index.html
+++ b/www/index.html
@@ -127,9 +127,12 @@
         <div id="fixednav">
             <div id="navcontainer">
                 <div id="logo3"></div>
-                <h3 id="countryName">Select a Country</h3>
-                <h3 class="currencyname"></h3>
-                <div class="select"><ul class='countrySelector'></ul></div>
+                <h3 class="headerbit" id="countryName">Select a Country</h3>
+                <h3 class="headerbit currencyname"></h3>
+                <div class="select">
+                    Select Country
+                    <ul class='countrySelector'></ul>
+                </div>
                 <div href="#map" id="backtomap"></div>
             </div>
         </div>
@@ -212,12 +215,14 @@
 
 
             <!--country name-->
-            <ul class="noteselect">
-               
-            </ul>
-            <div id="notearrows">
-                <a href="#" class="prevbutton notearrow"><</a>
-                <a href="#" class="nextbutton notearrow">></a>
+            <div id="notescontrolls">
+                <ul class="noteselect">
+                   
+                </ul>
+                <div id="notearrows">
+                    <a href="#" class="prevbutton notearrow"><</a>
+                    <a href="#" class="nextbutton notearrow">></a>
+                </div>
             </div>
         </div>
         <div class="noteholder">
